--- a/sass/_intro.scss
+++ b/sass/_intro.scss
@@ -6,7 +6,7 @@
   &__image {
     width: auto;
     height: 300px;
-    background-image: url(/img/background1.png);
+    background-image: url(../img/background1.png);
     background-position: center;
     background-size: cover;
   }
